--- a/index.html
+++ b/index.html
@@ -3,21 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <header class="pet-header">
         <div>
         <h1>The Fashion Pet</h1>
-            <nav>
+            <nav class="menu">
                 <a href="index.html">Home</a>
                 <a href="register.html">Register</a>
             </nav>
-        </div>
-    
+            <div>
+                <h2>The Doggo Fashionistas</h2>
+            </div>
+        </div>   
     </header>
 
     <main>
+        <div>
+            <h3>- Make your pet a fashion icon -</h3>
+        </div>
+        <div class="index-container">
+            <img class="index-img" src="./img/dogs-4.jpg" alt="">
+            <p class="descript">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur assumenda at a, sint debitis labore optio aperiam suscipit, provident excepturi nostrum, numquam delectus dicta deserunt. Commodi earum eum non eius?</p>       
+        </div>
 
     </main>
 
