completed displayNames and countPets function

--- a/register.html
+++ b/register.html
@@ -23,8 +23,14 @@
     <div class="pet-list-button">
         <div>            
             <button class="the-button" onclick="displayNames()">List pets</button>
+            <button class="the-button" onclick="countPets()">Count pets</button>
+            <button class="the-button" onclick="averageAge()">Average age of pets</button>
         </div>
+    </div>
+    <div class="results">
         <ul id="petList"></ul>
+        <ul id="petNumber"></ul>
+        <ul id="ageAverage"></ul>
     </div>
     
 
