added session 3 work

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="pet-header">
+    <header class="site-init">
         <div>
         <h1>The Fashion Pet</h1>
             <nav class="menu">
