--- a/register.html
+++ b/register.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <header class="pet-header">
+    <header class="site-init">
         <div>
         <h1>The Fashion Pet</h1>
             <nav class="menu">
@@ -20,36 +21,36 @@
         </div>   
     </header>
 
-    <main class="input-reg">
+    <main>
         <h3>Register a new pet</h3>
-        <div>
-            <div class="input-control">
-                <label>Name:*</label>
-                <input type="text" id="txtName">
+        <div class="form-container">
+            <div class="mb-3">
+                <label class="form-label">Name:*</label>
+                <input class="form-control" type="text" id="txtName">
             </div>
-            <div class="input-control">
-                <label>Age:</label>
-                <input type="number" id="txtAge">
+            <div class="mb-3">
+                <label class="form-label">Age:</label>
+                <input class="form-control" type="number" id="txtAge">
             </div>
-            <div class="input-control">
-                <label>Gender:</label>
-                <input type="text" id="txtGender">
+            <div class="mb-3">
+                <label class="form-label">Gender:</label>
+                <input class="form-control" type="text" id="txtGender">
             </div>
-            <div class="input-control">
+            <div class="mb-3">
                 <label>Service:*</label>
-                <select id="txtService" >
+                <select id="txtService" class="form-select">
                     <option value="" selected disabled>-- Select an option --</option>
                     <option value="Vaccines" >-- Vaccines --</option>
                     <option value="Grooming" >-- Grooming --</option>
                 </select>
             </div>
-            <div class="input-control">
-                <label>Breed:</label>
-                <input type="text" id="txtBreed">
+            <div class="mb-3">
+                <label class="form-label">Breed:</label>
+                <input class="form-control" type="text" id="txtBreed">
             </div>
-            <div class="input-control">
+            <div class="mb-3">
                 <label>Type:*</label>
-                <select id="txtType" >
+                <select id="txtType" class="form-select" >
                     <option value="" selected disabled>-- Select an option --</option>
                     <option value="Dog" >-- Dog --</option>
                     <option value="Cat" >-- Cat --</option>
@@ -59,12 +60,37 @@
             </div>
             
             <div class="btn-container">
-                <button class="btn btn-primary" onclick="register();">Register</button>
+                <button class="btn btn-dark" onclick="register();">Register</button>
             </div>
         </div>
     </main>
+    <section class="container">
+        <h2>Registered pets</h2>
+        <div class="info">
+            <p>Total = <span id="total">1000</span></p>
+            <p>Grooming = <span id="totalGroomings">1000</span></p>
+        </div>
+        <div id="petDiv">
+
+        </div>
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                </tr>
+            </thead>
+            <tbody id="petTable">
+                <tr>
+                    <td>Test</td>
+                    <td>99</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
     
 
     <script src="./scripts/register.js"></script>
+    <script src="./scripts/display.js"></script>
 </body>
 </html>
