--- a/register.html
+++ b/register.html
@@ -54,8 +54,6 @@
                     <option value="" selected disabled>-- Select an option --</option>
                     <option value="Dog" >-- Dog --</option>
                     <option value="Cat" >-- Cat --</option>
-                    <option value="Monkey" >-- Monkey --</option>
-                    <option value="Snake" >-- Snake --</option>
                 </select>
             </div>
             
@@ -65,10 +63,13 @@
         </div>
     </main>
     <section class="container">
-        <h2>Registered pets</h2>
+        <h4>Registered pets</h4>
         <div class="info">
             <p>Total = <span id="total">1000</span></p>
             <p>Grooming = <span id="totalGroomings">1000</span></p>
+            <p>Vaccines = <span id="totalVaccines">1000</span></p>
+            <p>Cats = <span id="totalCats">1000</span></p>
+            <p>Dogs = <span id="totalDogs">1000</span></p>
         </div>
         <div id="petDiv">
 
