--- a/register.html
+++ b/register.html
@@ -67,30 +67,37 @@
         <div class="info">
             <p>Total = <span id="total">1000</span></p>
             <p>Grooming = <span id="totalGroomings">1000</span></p>
-            <p>Vaccines = <span id="totalVaccines">1000</span></p>
+            <p>Vaccine = <span id="totalVaccines">1000</span></p>
             <p>Cats = <span id="totalCats">1000</span></p>
             <p>Dogs = <span id="totalDogs">1000</span></p>
         </div>
         <div id="petDiv">
 
         </div>
-        <table>
+
+        <table class="table">
             <thead>
                 <tr>
                     <th>Name</th>
                     <th>Age</th>
+                    <th>Gender</th>
+                    <th>Service</th>
+                    <th>Breed</th>
+                    <th>Type</th>
+                    <th>Action</th>
                 </tr>
             </thead>
+
             <tbody id="petTable">
-                <tr>
+                <!-- <tr>
                     <td>Test</td>
                     <td>99</td>
-                </tr>
+                </tr> -->
             </tbody>
         </table>
-    </section>
-    
 
+
+    </section>
     <script src="./scripts/register.js"></script>
     <script src="./scripts/display.js"></script>
 </body>
