--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -30,6 +31,16 @@
         </div>
 
     </main>
+
+    <footer>
+        <div class="bar">
+        <h1>The Fashion Pet</h1>
+        <nav class="menu-footer">
+            <a href="index.html"> Home</a>
+            <a href="register.html"> Register</a>
+        </nav>
+        </div> 
+    </footer>
 
 
     <script src="scripts/register.js"></script>
