--- a/register.html
+++ b/register.html
@@ -14,6 +14,7 @@
             <nav class="menu">
                 <a href="index.html">Home</a>
                 <a href="register.html">Register</a>
+                <a href="services.html">Services</a>
             </nav>
             <div>
                 <h2>The Doggo Fashionistas</h2>
@@ -113,6 +114,7 @@
         <nav class="menu-footer">
             <a href="index.html"> Home</a>
             <a href="register.html"> Register</a>
+            <a href="services.html">Services</a>
         </nav>
         </div> 
     </footer>
@@ -120,5 +122,6 @@
 
     <script src="./scripts/register.js"></script>
     <script src="./scripts/display.js"></script>
+    <script src ="https://code.jquery.com/jquery-3.7.1.js"></script>
 </body>
 </html>
