--- a/services.html
+++ b/services.html
@@ -23,14 +23,19 @@
     </header>
 
     <main>
-        <div>
-            <h3>- Make your pet a fashion icon -</h3>
-        </div>
-        <div class="index-container">
-            <img class="index-img" src="./img/dogs-4.jpg" alt="">
-            <p class="descript">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur assumenda at a, sint debitis labore optio aperiam suscipit, provident excepturi nostrum, numquam delectus dicta deserunt. Commodi earum eum non eius?</p>       
-        </div>
-
+        <h3>Register a new service</h3>
+        <div class="form-container">
+            <div class="mb-3">
+                <label class="form-label">Description:*</label>
+                <input class="form-control" type="text" id="txtDescription">
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Price:</label>
+                <input class="form-control" type="number" id="txtPrice">
+            </div>
+            <div class="btn-container">
+                <button class="btn btn-dark" onclick="register();">Register</button>
+            </div>
     </main>
 
     <footer>
@@ -45,6 +50,7 @@
     </footer>
 
 
-    <script src="scripts/register.js"></script>
+    <script src="./scripts/services.js"></script>
+    <script src ="https://code.jquery.com/jquery-3.7.1.js"></script>
 </body>
 </html>
