added final touches for class presentation

--- a/index.html
+++ b/index.html
@@ -30,8 +30,25 @@
             <img class="index-img" src="./img/dogs-4.jpg" alt="">
             <p class="descript">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur assumenda at a, sint debitis labore optio aperiam suscipit, provident excepturi nostrum, numquam delectus dicta deserunt. Commodi earum eum non eius?</p>       
         </div>
-
     </main>
+
+    <div class="container">
+        <h3>Customer Reviews</h3>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="testimonial">
+                    <p><strong>9/10</strong> The Pet Review Site :</p>
+                    <p>"The Fashion Pet transformed our dog into a true fashion icon! Highly recommended."</p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="testimonial">
+                    <p><strong>8.5/10</strong> The kitty whisperer:</p>
+                    <p>"Amazing pet styling services. Our cat now struts like a runway model!"</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <footer>
         <div class="bar">
