small changes to project

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="testimonial">
-                    <p><strong>9/10</strong> The Pet Review Site :</p>
+                    <p><strong>9/10</strong> A crazy dog person :</p>
                     <p>"The Fashion Pet transformed our dog into a true fashion icon! Highly recommended."</p>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="testimonial">
-                    <p><strong>8.5/10</strong> The kitty whisperer:</p>
+                    <p><strong>8.5/10</strong> Crazy cat lady:</p>
                     <p>"Amazing pet styling services. Our cat now struts like a runway model!"</p>
                 </div>
             </div>
