--- a/services.html
+++ b/services.html
@@ -30,7 +30,7 @@
                 <input class="form-control" type="text" id="txtDescription">
             </div>
             <div class="mb-3">
-                <label class="form-label">Price:</label>
+                <label class="form-label">Date:</label>
                 <input class="form-control" type="number" id="txtPrice">
             </div>
             
@@ -44,7 +44,7 @@
             </div>
             
             <div class="mb-3">
-                <label>Type:*</label>
+                <label>Payment Method:*</label>
                 <select id="txtType" class="form-select" >
                     <option value="" selected disabled>-- Select an option --</option>
                     <option value="Dog" >-- Visa --</option>
@@ -58,7 +58,7 @@
                 <input class="form-control" type="text" id="txtBreed">
             </div>
             <div class="btn-container">
-                <button class="btn btn-dark" onclick="register();">Register</button>
+                <button class="btn btn-dark" onclick="register();">Confirm</button>
             </div>
     </main>
 
