--- a/services.html
+++ b/services.html
@@ -73,8 +73,8 @@
         </div> 
     </footer>
 
-
-    <script src="./scripts/services.js"></script>
     <script src ="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <script src="./scripts/storeManager.js"></script>
+    <script src="./scripts/services.js"></script>
 </body>
 </html>
