--- a/services.html
+++ b/services.html
@@ -30,7 +30,7 @@
                 <input class="form-control" type="text" id="txtDescription">
             </div>
             <div class="mb-3">
-                <label class="form-label">Date:</label>
+                <label class="form-label">Date:*</label>
                 <input class="form-control" type="date" id="txtDate">
             </div>
             
