added session4 work

--- a/register.html
+++ b/register.html
@@ -29,26 +29,29 @@
                 <label class="form-label">Name:*</label>
                 <input class="form-control" type="text" id="txtName">
             </div>
+
             <div class="mb-3">
                 <label class="form-label">Age:</label>
                 <input class="form-control" type="number" id="txtAge">
             </div>
+
             <div class="mb-3">
                 <label class="form-label">Gender:</label>
                 <input class="form-control" type="text" id="txtGender">
             </div>
+
             <div class="mb-3">
                 <label>Service:*</label>
                 <select id="txtService" class="form-select">
-                    <option value="" selected disabled>-- Select an option --</option>
-                    <option value="Vaccine" >-- Vaccine --</option>
-                    <option value="Grooming" >-- Grooming --</option>
+                    <option value="" selected disabled>-- Select an option --</option>   
                 </select>
             </div>
+
             <div class="mb-3">
                 <label class="form-label">Breed:</label>
                 <input class="form-control" type="text" id="txtBreed">
             </div>
+
             <div class="mb-3">
                 <label>Type:*</label>
                 <select id="txtType" class="form-select" >
@@ -119,9 +122,9 @@
         </div> 
     </footer>
 
-
+    <script src ="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <script src="./scripts/storeManager.js"></script>
     <script src="./scripts/register.js"></script>
     <script src="./scripts/display.js"></script>
-    <script src ="https://code.jquery.com/jquery-3.7.1.js"></script>
 </body>
 </html>
